# PluginTemplate

./: .gitignore  CMakeLists.txt  main.cpp
extensionsystem/: CMakeLists.txt  extensionsystemglobal.h  extensionsystemtr.h  iplugin.cpp  iplugin.h  pluginmanager.cpp  pluginmanager.h  pluginspecification.cpp  pluginspecification.h
utils/: CMakeLists.txt  algorithm.h  hostinfo.cpp  hostinfo.h  settings.cpp  settings.h  stringutils.cpp  stringutils.h  utilsglobal.h
